# fadetop

./: Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
examples/ui/: Cargo.toml
examples/ui/src/: main.rs
src/: app.rs  config.rs  event.rs  lib.rs  main.rs  priority.rs  state.rs  tab_selection.rs  thread_selection.rs  timeline.rs
src/tabs/: local_variables.rs  mod.rs  terminal_event.rs  thread_selection.rs  timeline.rs
