[package]
name = "ui"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["feiyang <feiyangc@outlook.com>"]
license = "MIT"
edition = "2024"

[dependencies]
ratatui = { workspace = true }
py-spy = { workspace = true }
color-eyre = "0.6.3"
fadetop = { path = "../.." }
anyhow = { workspace = true }
tokio = { workspace = true }
